k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fba-logi
  labels:
    app.kubernetes.io/name: fba-logi
    app.kubernetes.io/managed-by: kubectl
