k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fba-logi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fba-logi-backend
  template:
    metadata:
      labels:
        app: fba-logi-backend
    spec:
      containers:
        - name: backend
          image: fba-logi-backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fba-logi-backend-svc
spec:
  type: NodePort
  selector:
    app: fba-logi-backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
