k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fba-logi-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fba-logi-frontend
  template:
    metadata:
      labels:
        app: fba-logi-frontend
    spec:
      containers:
        - name: frontend
          image: fba-logi-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fba-logi-frontend-svc
spec:
  type: NodePort
  selector:
    app: fba-logi-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
